--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(pitri)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(pitri main.cpp Graph.cpp Graph.h Vertex.cpp Vertex.h Edge.cpp Edge.h)
+add_executable(pitri main.cpp Graph.cpp Graph.h Vertex.cpp Vertex.h Edge.cpp Edge.h AdjacencyList.cpp AdjacencyList.h)
