Adjacency list can check if edge is present (for graph constructor)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(pitri)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(pitri main.cpp Vertex.cpp Vertex.h AdjacencyList.cpp AdjacencyList.h Graph.cpp Graph.h)
+add_executable(pitri main.cpp Vertex.cpp Vertex.h AdjacencyList.cpp AdjacencyList.h Graph.cpp Graph.h LoopException.h MultiedgeException.h)
